--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/auth": "^12.8.0",
+    "@react-native-google-signin/google-signin": "^7.0.0-alpha.3",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-fbsdk-next": "^4.5.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
